@@ -67,6 +67,28 @@ def find_branch(*ignored, **ignored_too):
     raise NotImplementedError('find_branch() is not supported anymore, '
                               'please use one of the new branch constructors')
 
+
+def needs_read_lock(unbound):
+    """Decorate unbound to take out and release a read lock."""
+    def decorated(self, *args, **kwargs):
+        self.lock_read()
+        try:
+            return unbound(self, *args, **kwargs)
+        finally:
+            self.unlock()
+    return decorated
+
+
+def needs_write_lock(unbound):
+    """Decorate unbound to take out and release a write lock."""
+    def decorated(self, *args, **kwargs):
+        self.lock_write()
+        try:
+            return unbound(self, *args, **kwargs)
+        finally:
+            self.unlock()
+    return decorated
+
 ######################################################################
 # branch objects
 
@@ -507,18 +529,15 @@ class _Branch(Branch):
                 entry.parent_id = inv.root.file_id
         self._write_inventory(inv)
 
+    @needs_read_lock
     def read_working_inventory(self):
         """Read the working inventory."""
-        self.lock_read()
-        try:
-            # ElementTree does its own conversion from UTF-8, so open in
-            # binary.
-            f = self.controlfile('inventory', 'rb')
-            return bzrlib.xml5.serializer_v5.read_inventory(f)
-        finally:
-            self.unlock()
-            
+        # ElementTree does its own conversion from UTF-8, so open in
+        # binary.
+        f = self.controlfile('inventory', 'rb')
+        return bzrlib.xml5.serializer_v5.read_inventory(f)
 
+    @needs_write_lock
     def _write_inventory(self, inv):
         """Update the working inventory.
 
@@ -526,21 +545,18 @@ class _Branch(Branch):
         will be committed to the next revision.
         """
         from cStringIO import StringIO
-        self.lock_write()
-        try:
-            sio = StringIO()
-            bzrlib.xml5.serializer_v5.write_inventory(inv, sio)
-            sio.seek(0)
-            # Transport handles atomicity
-            self.put_controlfile('inventory', sio)
-        finally:
-            self.unlock()
+        sio = StringIO()
+        bzrlib.xml5.serializer_v5.write_inventory(inv, sio)
+        sio.seek(0)
+        # Transport handles atomicity
+        self.put_controlfile('inventory', sio)
         
         mutter('wrote working inventory')
             
     inventory = property(read_working_inventory, _write_inventory, None,
                          """Inventory for the working copy.""")
 
+    @needs_write_lock
     def add(self, files, ids=None):
         """Make files versioned.
 
@@ -576,55 +592,47 @@ class _Branch(Branch):
         else:
             assert(len(ids) == len(files))
 
-        self.lock_write()
-        try:
-            inv = self.read_working_inventory()
-            for f,file_id in zip(files, ids):
-                if is_control_file(f):
-                    raise BzrError("cannot add control file %s" % quotefn(f))
+        inv = self.read_working_inventory()
+        for f,file_id in zip(files, ids):
+            if is_control_file(f):
+                raise BzrError("cannot add control file %s" % quotefn(f))
 
-                fp = splitpath(f)
+            fp = splitpath(f)
 
-                if len(fp) == 0:
-                    raise BzrError("cannot add top-level %r" % f)
+            if len(fp) == 0:
+                raise BzrError("cannot add top-level %r" % f)
 
-                fullpath = os.path.normpath(self.abspath(f))
+            fullpath = os.path.normpath(self.abspath(f))
 
-                try:
-                    kind = file_kind(fullpath)
-                except OSError:
-                    # maybe something better?
-                    raise BzrError('cannot add: not a regular file, symlink or directory: %s' % quotefn(f))
+            try:
+                kind = file_kind(fullpath)
+            except OSError:
+                # maybe something better?
+                raise BzrError('cannot add: not a regular file, symlink or directory: %s' % quotefn(f))
 
-                if not InventoryEntry.versionable_kind(kind):
-                    raise BzrError('cannot add: not a versionable file ('
-                                   'i.e. regular file, symlink or directory): %s' % quotefn(f))
+            if not InventoryEntry.versionable_kind(kind):
+                raise BzrError('cannot add: not a versionable file ('
+                               'i.e. regular file, symlink or directory): %s' % quotefn(f))
 
-                if file_id is None:
-                    file_id = gen_file_id(f)
-                inv.add_path(f, kind=kind, file_id=file_id)
+            if file_id is None:
+                file_id = gen_file_id(f)
+            inv.add_path(f, kind=kind, file_id=file_id)
 
-                mutter("add file %s file_id:{%s} kind=%r" % (f, file_id, kind))
+            mutter("add file %s file_id:{%s} kind=%r" % (f, file_id, kind))
 
-            self._write_inventory(inv)
-        finally:
-            self.unlock()
-            
+        self._write_inventory(inv)
 
+    @needs_read_lock
     def print_file(self, file, revno):
         """Print `file` to stdout."""
-        self.lock_read()
-        try:
-            tree = self.revision_tree(self.get_rev_id(revno))
-            # use inventory as it was in that revision
-            file_id = tree.inventory.path2id(file)
-            if not file_id:
-                raise BzrError("%r is not present in revision %s" % (file, revno))
-            tree.print_file(file_id)
-        finally:
-            self.unlock()
+        tree = self.revision_tree(self.get_rev_id(revno))
+        # use inventory as it was in that revision
+        file_id = tree.inventory.path2id(file)
+        if not file_id:
+            raise BzrError("%r is not present in revision %s" % (file, revno))
+        tree.print_file(file_id)
 
-
+    @needs_write_lock
     def remove(self, files, verbose=False):
         """Mark nominated files for removal from the inventory.
 
@@ -644,30 +652,25 @@ class _Branch(Branch):
         if isinstance(files, basestring):
             files = [files]
 
-        self.lock_write()
+        tree = self.working_tree()
+        inv = tree.inventory
 
-        try:
-            tree = self.working_tree()
-            inv = tree.inventory
+        # do this before any modifications
+        for f in files:
+            fid = inv.path2id(f)
+            if not fid:
+                raise BzrError("cannot remove unversioned file %s" % quotefn(f))
+            mutter("remove inventory entry %s {%s}" % (quotefn(f), fid))
+            if verbose:
+                # having remove it, it must be either ignored or unknown
+                if tree.is_ignored(f):
+                    new_status = 'I'
+                else:
+                    new_status = '?'
+                show_status(new_status, inv[fid].kind, quotefn(f))
+            del inv[fid]
 
-            # do this before any modifications
-            for f in files:
-                fid = inv.path2id(f)
-                if not fid:
-                    raise BzrError("cannot remove unversioned file %s" % quotefn(f))
-                mutter("remove inventory entry %s {%s}" % (quotefn(f), fid))
-                if verbose:
-                    # having remove it, it must be either ignored or unknown
-                    if tree.is_ignored(f):
-                        new_status = 'I'
-                    else:
-                        new_status = '?'
-                    show_status(new_status, inv[fid].kind, quotefn(f))
-                del inv[fid]
-
-            self._write_inventory(inv)
-        finally:
-            self.unlock()
+        self._write_inventory(inv)
 
     # FIXME: this doesn't need to be a branch method
     def set_inventory(self, new_inventory_list):
@@ -706,17 +709,13 @@ class _Branch(Branch):
         """
         return self.working_tree().unknowns()
 
-
+    @needs_write_lock
     def append_revision(self, *revision_ids):
         for revision_id in revision_ids:
             mutter("add {%s} to revision-history" % revision_id)
-        self.lock_write()
-        try:
-            rev_history = self.revision_history()
-            rev_history.extend(revision_ids)
-            self.put_controlfile('revision-history', '\n'.join(rev_history))
-        finally:
-            self.unlock()
+        rev_history = self.revision_history()
+        rev_history.extend(revision_ids)
+        self.put_controlfile('revision-history', '\n'.join(rev_history))
 
     def has_revision(self, revision_id):
         """True if this branch has a copy of the revision.
@@ -726,19 +725,15 @@ class _Branch(Branch):
         return (revision_id is None
                 or self.revision_store.has_id(revision_id))
 
+    @needs_read_lock
     def get_revision_xml_file(self, revision_id):
         """Return XML file object for revision object."""
         if not revision_id or not isinstance(revision_id, basestring):
             raise InvalidRevisionId(revision_id)
-
-        self.lock_read()
         try:
-            try:
-                return self.revision_store.get(revision_id)
-            except (IndexError, KeyError):
-                raise bzrlib.errors.NoSuchRevision(self, revision_id)
-        finally:
-            self.unlock()
+            return self.revision_store.get(revision_id)
+        except (IndexError, KeyError):
+            raise bzrlib.errors.NoSuchRevision(self, revision_id)
 
     #deprecated
     get_revision_xml = get_revision_xml_file
@@ -837,24 +832,21 @@ class _Branch(Branch):
         else:
             return self.get_inventory(revision_id)
 
+    @needs_read_lock
     def revision_history(self):
         """Return sequence of revision hashes on to this branch."""
-        self.lock_read()
-        try:
-            transaction = self.get_transaction()
-            history = transaction.map.find_revision_history()
-            if history is not None:
-                mutter("cache hit for revision-history in %s", self)
-                return list(history)
-            history = [l.rstrip('\r\n') for l in
-                    self.controlfile('revision-history', 'r').readlines()]
-            transaction.map.add_revision_history(history)
-            # this call is disabled because revision_history is 
-            # not really an object yet, and the transaction is for objects.
-            # transaction.register_clean(history, precious=True)
+        transaction = self.get_transaction()
+        history = transaction.map.find_revision_history()
+        if history is not None:
+            mutter("cache hit for revision-history in %s", self)
             return list(history)
-        finally:
-            self.unlock()
+        history = [l.rstrip('\r\n') for l in
+                self.controlfile('revision-history', 'r').readlines()]
+        transaction.map.add_revision_history(history)
+        # this call is disabled because revision_history is 
+        # not really an object yet, and the transaction is for objects.
+        # transaction.register_clean(history, precious=True)
+        return list(history)
 
     def revno(self):
         """Return current revision number for this branch.
@@ -864,7 +856,6 @@ class _Branch(Branch):
         """
         return len(self.revision_history())
 
-
     def last_revision(self):
         """Return last patch hash, or None if no history.
         """
@@ -873,7 +864,6 @@ class _Branch(Branch):
             return ph[-1]
         else:
             return None
-
 
     def missing_revisions(self, other, stop_revision=None, diverged_ok=False):
         """Return a list of new revisions that would perfectly fit.
@@ -1009,56 +999,52 @@ class _Branch(Branch):
         """
         return self.revision_tree(self.last_revision())
 
-
+    @needs_write_lock
     def rename_one(self, from_rel, to_rel):
         """Rename one file.
 
         This can change the directory or the filename or both.
         """
-        self.lock_write()
+        tree = self.working_tree()
+        inv = tree.inventory
+        if not tree.has_filename(from_rel):
+            raise BzrError("can't rename: old working file %r does not exist" % from_rel)
+        if tree.has_filename(to_rel):
+            raise BzrError("can't rename: new working file %r already exists" % to_rel)
+
+        file_id = inv.path2id(from_rel)
+        if file_id == None:
+            raise BzrError("can't rename: old name %r is not versioned" % from_rel)
+
+        if inv.path2id(to_rel):
+            raise BzrError("can't rename: new name %r is already versioned" % to_rel)
+
+        to_dir, to_tail = os.path.split(to_rel)
+        to_dir_id = inv.path2id(to_dir)
+        if to_dir_id == None and to_dir != '':
+            raise BzrError("can't determine destination directory id for %r" % to_dir)
+
+        mutter("rename_one:")
+        mutter("  file_id    {%s}" % file_id)
+        mutter("  from_rel   %r" % from_rel)
+        mutter("  to_rel     %r" % to_rel)
+        mutter("  to_dir     %r" % to_dir)
+        mutter("  to_dir_id  {%s}" % to_dir_id)
+
+        inv.rename(file_id, to_dir_id, to_tail)
+
+        from_abs = self.abspath(from_rel)
+        to_abs = self.abspath(to_rel)
         try:
-            tree = self.working_tree()
-            inv = tree.inventory
-            if not tree.has_filename(from_rel):
-                raise BzrError("can't rename: old working file %r does not exist" % from_rel)
-            if tree.has_filename(to_rel):
-                raise BzrError("can't rename: new working file %r already exists" % to_rel)
+            rename(from_abs, to_abs)
+        except OSError, e:
+            raise BzrError("failed to rename %r to %r: %s"
+                    % (from_abs, to_abs, e[1]),
+                    ["rename rolled back"])
 
-            file_id = inv.path2id(from_rel)
-            if file_id == None:
-                raise BzrError("can't rename: old name %r is not versioned" % from_rel)
+        self._write_inventory(inv)
 
-            if inv.path2id(to_rel):
-                raise BzrError("can't rename: new name %r is already versioned" % to_rel)
-
-            to_dir, to_tail = os.path.split(to_rel)
-            to_dir_id = inv.path2id(to_dir)
-            if to_dir_id == None and to_dir != '':
-                raise BzrError("can't determine destination directory id for %r" % to_dir)
-
-            mutter("rename_one:")
-            mutter("  file_id    {%s}" % file_id)
-            mutter("  from_rel   %r" % from_rel)
-            mutter("  to_rel     %r" % to_rel)
-            mutter("  to_dir     %r" % to_dir)
-            mutter("  to_dir_id  {%s}" % to_dir_id)
-
-            inv.rename(file_id, to_dir_id, to_tail)
-
-            from_abs = self.abspath(from_rel)
-            to_abs = self.abspath(to_rel)
-            try:
-                rename(from_abs, to_abs)
-            except OSError, e:
-                raise BzrError("failed to rename %r to %r: %s"
-                        % (from_abs, to_abs, e[1]),
-                        ["rename rolled back"])
-
-            self._write_inventory(inv)
-        finally:
-            self.unlock()
-
-
+    @needs_write_lock
     def move(self, from_paths, to_name):
         """Rename files.
 
@@ -1074,58 +1060,53 @@ class _Branch(Branch):
         entry that is moved.
         """
         result = []
-        self.lock_write()
-        try:
-            ## TODO: Option to move IDs only
-            assert not isinstance(from_paths, basestring)
-            tree = self.working_tree()
-            inv = tree.inventory
-            to_abs = self.abspath(to_name)
-            if not isdir(to_abs):
-                raise BzrError("destination %r is not a directory" % to_abs)
-            if not tree.has_filename(to_name):
-                raise BzrError("destination %r not in working directory" % to_abs)
-            to_dir_id = inv.path2id(to_name)
-            if to_dir_id == None and to_name != '':
-                raise BzrError("destination %r is not a versioned directory" % to_name)
-            to_dir_ie = inv[to_dir_id]
-            if to_dir_ie.kind not in ('directory', 'root_directory'):
-                raise BzrError("destination %r is not a directory" % to_abs)
+        ## TODO: Option to move IDs only
+        assert not isinstance(from_paths, basestring)
+        tree = self.working_tree()
+        inv = tree.inventory
+        to_abs = self.abspath(to_name)
+        if not isdir(to_abs):
+            raise BzrError("destination %r is not a directory" % to_abs)
+        if not tree.has_filename(to_name):
+            raise BzrError("destination %r not in working directory" % to_abs)
+        to_dir_id = inv.path2id(to_name)
+        if to_dir_id == None and to_name != '':
+            raise BzrError("destination %r is not a versioned directory" % to_name)
+        to_dir_ie = inv[to_dir_id]
+        if to_dir_ie.kind not in ('directory', 'root_directory'):
+            raise BzrError("destination %r is not a directory" % to_abs)
 
-            to_idpath = inv.get_idpath(to_dir_id)
+        to_idpath = inv.get_idpath(to_dir_id)
 
-            for f in from_paths:
-                if not tree.has_filename(f):
-                    raise BzrError("%r does not exist in working tree" % f)
-                f_id = inv.path2id(f)
-                if f_id == None:
-                    raise BzrError("%r is not versioned" % f)
-                name_tail = splitpath(f)[-1]
-                dest_path = appendpath(to_name, name_tail)
-                if tree.has_filename(dest_path):
-                    raise BzrError("destination %r already exists" % dest_path)
-                if f_id in to_idpath:
-                    raise BzrError("can't move %r to a subdirectory of itself" % f)
+        for f in from_paths:
+            if not tree.has_filename(f):
+                raise BzrError("%r does not exist in working tree" % f)
+            f_id = inv.path2id(f)
+            if f_id == None:
+                raise BzrError("%r is not versioned" % f)
+            name_tail = splitpath(f)[-1]
+            dest_path = appendpath(to_name, name_tail)
+            if tree.has_filename(dest_path):
+                raise BzrError("destination %r already exists" % dest_path)
+            if f_id in to_idpath:
+                raise BzrError("can't move %r to a subdirectory of itself" % f)
 
-            # OK, so there's a race here, it's possible that someone will
-            # create a file in this interval and then the rename might be
-            # left half-done.  But we should have caught most problems.
+        # OK, so there's a race here, it's possible that someone will
+        # create a file in this interval and then the rename might be
+        # left half-done.  But we should have caught most problems.
 
-            for f in from_paths:
-                name_tail = splitpath(f)[-1]
-                dest_path = appendpath(to_name, name_tail)
-                result.append((f, dest_path))
-                inv.rename(inv.path2id(f), to_dir_id, name_tail)
-                try:
-                    rename(self.abspath(f), self.abspath(dest_path))
-                except OSError, e:
-                    raise BzrError("failed to rename %r to %r: %s" % (f, dest_path, e[1]),
-                            ["rename rolled back"])
+        for f in from_paths:
+            name_tail = splitpath(f)[-1]
+            dest_path = appendpath(to_name, name_tail)
+            result.append((f, dest_path))
+            inv.rename(inv.path2id(f), to_dir_id, name_tail)
+            try:
+                rename(self.abspath(f), self.abspath(dest_path))
+            except OSError, e:
+                raise BzrError("failed to rename %r to %r: %s" % (f, dest_path, e[1]),
+                        ["rename rolled back"])
 
-            self._write_inventory(inv)
-        finally:
-            self.unlock()
-
+        self._write_inventory(inv)
         return result
 
 
@@ -1201,13 +1182,9 @@ class _Branch(Branch):
         if updated:
             self.set_pending_merges(p)
 
+    @needs_write_lock
     def set_pending_merges(self, rev_list):
-        self.lock_write()
-        try:
-            self.put_controlfile('pending-merges', '\n'.join(rev_list))
-        finally:
-            self.unlock()
-
+        self.put_controlfile('pending-merges', '\n'.join(rev_list))
 
     def get_parent(self):
         """Return the parent location of the branch.
@@ -1226,20 +1203,16 @@ class _Branch(Branch):
                     raise
         return None
 
-
+    @needs_write_lock
     def set_parent(self, url):
         # TODO: Maybe delete old location files?
         from bzrlib.atomicfile import AtomicFile
-        self.lock_write()
+        f = AtomicFile(self.controlfilename('parent'))
         try:
-            f = AtomicFile(self.controlfilename('parent'))
-            try:
-                f.write(url + '\n')
-                f.commit()
-            finally:
-                f.close()
+            f.write(url + '\n')
+            f.commit()
         finally:
-            self.unlock()
+            f.close()
 
     def check_revno(self, revno):
         """\
@@ -1261,13 +1234,10 @@ class _Branch(Branch):
         plaintext = Testament.from_revision(self, revision_id).as_short_text()
         self.store_revision_signature(gpg_strategy, plaintext, revision_id)
 
+    @needs_write_lock
     def store_revision_signature(self, gpg_strategy, plaintext, revision_id):
-        self.lock_write()
-        try:
-            self.revision_store.add(StringIO(gpg_strategy.sign(plaintext)), 
-                                    revision_id, "sig")
-        finally:
-            self.unlock()
+        self.revision_store.add(StringIO(gpg_strategy.sign(plaintext)), 
+                                revision_id, "sig")
 
 
 class ScratchBranch(_Branch):
